<resources>
    <string name="OK">OK</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">Add</string>
    <string name="add_geofences_already_requested_error">Can\'t add geofences, previous request hasn\'t finished.</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_result_success">Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="admob_banner">ca-app-pub-8303588283280137/8369817259</string>
    <string name="admob_interstitial">ca-app-pub-8303588283280137/1612837212</string>
    <string name="agreement_page_button_agree">Agree</string>
    <string name="agreement_page_button_decline">Decline</string>
    <string name="agreement_page_title">Agreement</string>
    <string name="airpush_apikey" />
    <string name="announcements_title">Announcements</string>
    <string name="app_auth_action_forgot_password">Forgot Password?</string>
    <string name="app_auth_action_register">Register</string>
    <string name="app_auth_action_register_a">Register a new account</string>
    <string name="app_auth_action_show_sign_in">Already have an account?</string>
    <string name="app_auth_action_show_sign_in_link">Sign in</string>
    <string name="app_auth_action_sign_in">Sign in</string>
    <string name="app_auth_action_sign_in_short">Sign in</string>
    <string name="app_auth_appeal_register">Please register to access this app</string>
    <string name="app_auth_appeal_sign_in">Please sign in to access this app</string>
    <string name="app_auth_error_account_already_exists">Account with the same email already exists</string>
    <string name="app_auth_error_empty_email">Email address is required</string>
    <string name="app_auth_error_empty_password">Password is required</string>
    <string name="app_auth_error_forgot_password_invalid_email">Please provide a valid email address</string>
    <string name="app_auth_error_forgot_password_title">Forgot something?</string>
    <string name="app_auth_error_forgot_password_user_not_found">User with provided email doesn\'t exist</string>
    <string name="app_auth_error_incorrect_credentials">The combination of email and password you entered is incorrect</string>
    <string name="app_auth_error_invalid_email">This email address is invalid</string>
    <string name="app_auth_error_password_too_short">Password must be at least %s characters</string>
    <string name="app_auth_error_passwords_dont_match">The passwords don\'t match</string>
    <string name="app_auth_error_request_failed">Error occurred</string>
    <string name="app_auth_error_request_failed_pattern">Password must contain not less than 8 characters, at least one lower case letter, one upper case letter, one special character and one numeric value.</string>
    <string name="app_auth_msg_register_request_cancelled">Registration request cancelled</string>
    <string name="app_auth_msg_register_request_succeed">You are successfully registered\10Now you can sign in.</string>
    <string name="app_auth_msg_sign_in_request_cancelled">Sign in request cancelled</string>
    <string name="app_auth_prompt_confirm_password">Confirm password</string>
    <string name="app_auth_prompt_email">Email</string>
    <string name="app_auth_prompt_password">Password</string>
    <string name="app_auth_title_register">Register</string>
    <string name="app_auth_title_sign_in">Sign in</string>
    <string name="app_forgot_password_email_hint">Your email address</string>
    <string name="app_forgot_password_note">We will send you an email with your application name reminder and instructions on how to reset your password. If you don\'t find an email from us in your inbox, please check your BULK or SPAM folder</string>
    <string name="app_forgot_password_send">SEND</string>
    <string name="app_forgot_password_send_toast">Email sent!</string>
    <string name="app_id">Ejemplo17</string>
    <string name="app_licensing_public_key" />
    <string name="app_name">Meditation Music</string>
    <string name="app_no_resources">No resources</string>
    <string name="app_sign_in_note">Please sign in</string>
    <string name="app_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="app_sign_in_with_google">Sign in with Google</string>
    <string name="app_state_configuring">Configuring…</string>
    <string name="app_state_initializing">Initializing…</string>
    <string name="app_state_syncing">Syncing…</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="appshare_app_link_name">Application Link:</string>
    <string name="appshare_app_link_name_amazon">Amazon App Store %s</string>
    <string name="appshare_app_link_name_android">Google Play Store %s</string>
    <string name="appshare_app_link_name_appmart">AppMart Store %s</string>
    <string name="appshare_app_link_name_ipad">iPad App Store %s</string>
    <string name="calendar_event_category_spinner_prompt">Category</string>
    <string name="calendar_event_create_new">New event</string>
    <string name="calendar_event_edit_all_day">All-day</string>
    <string name="calendar_event_edit_case_number">Case number</string>
    <string name="calendar_event_edit_case_reference">Reference</string>
    <string name="calendar_event_edit_category">Category</string>
    <string name="calendar_event_edit_days_off">Off</string>
    <string name="calendar_event_edit_days_off_hint">Days off</string>
    <string name="calendar_event_edit_days_on">On</string>
    <string name="calendar_event_edit_days_on_hint">Days on</string>
    <string name="calendar_event_edit_end_time">Ends</string>
    <string name="calendar_event_edit_location">Location</string>
    <string name="calendar_event_edit_location_hint">Event location</string>
    <string name="calendar_event_edit_start_time">Starts</string>
    <string name="calendar_event_edit_title">Title</string>
    <string name="calendar_event_edit_title_hint">Event title</string>
    <string name="calendar_event_edit_view_description">View description</string>
    <string name="calendar_info">Info</string>
    <string name="calendar_select_today_date">Today</string>
    <string name="calendar_view_agenda">Agenda</string>
    <string name="calendar_view_month">Month</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="imagelist_add_from_camera">Add from camera</string>
    <string name="imagelist_add_from_gallery">Add from gallery</string>
    <string name="imagelist_delete_all">Delete all</string>
    <string name="imagelist_send_all">Send all</string>
    <string name="login_register_action_register">Register</string>
    <string name="login_register_register_confirm_password">Confirm password</string>
    <string name="login_register_register_date_of_birth">Date of birth</string>
    <string name="login_register_register_email">E-mail</string>
    <string name="login_register_register_first_name">First name</string>
    <string name="login_register_register_last_name">Last name</string>
    <string name="login_register_register_password">Password</string>
    <string name="login_register_register_phone_number">Phone number</string>
    <string name="previewer_filter">Filter</string>
    <string name="previewer_log_in_as">Log in as</string>
    <string name="previewer_log_out">Log out</string>
    <string name="previewer_refresh">Refresh</string>
    <string name="previewer_search">Search</string>
    <string name="previewer_templates">Templates</string>
    <string name="quiz_result_finish">Finish</string>
    <string name="quiz_result_header">Quiz Over</string>
    <string name="quiz_result_hint">Enter Your Name For New HighScore!</string>
    <string name="quiz_result_points_label_name">Total Points</string>
    <string name="quiz_result_score">000</string>
    <string name="save">Save</string>
    <string name="save_photo_address">Address</string>
    <string name="save_photo_address_hint">Shot-at address</string>
    <string name="save_photo_album">Album</string>
    <string name="save_photo_album_spinner_prompt">Choose album</string>
    <string name="save_photo_left_text">Bottom-Left Text</string>
    <string name="save_photo_left_text_hint">Optional text</string>
    <string name="save_photo_left_text_prefix">Bottom-Left Text Prefix</string>
    <string name="save_photo_left_text_prefix_spinner_prompt">Choose prefix</string>
    <string name="save_photo_location">Location</string>
    <string name="save_photo_location_hint">Shot-at location</string>
    <string name="save_photo_right_text">Bottom-Right Text</string>
    <string name="save_photo_right_text_hint">Optional text</string>
    <string name="save_photo_use_street_address">Use street address</string>
    <string name="settings_pref_app_user_sign_out">Sign out</string>
    <string name="settings_pref_app_user_sign_out_summary">Access to this app will be restricted until you sign in again</string>
    <string name="settings_pref_clear_resources">Clear synced resources</string>
    <string name="settings_pref_clear_resources_summary">Clear synchronized app resources and revert to original state</string>
    <string name="settings_pref_force_sync">Force sync</string>
    <string name="settings_pref_force_sync_summary">Initiate app resource synchronization right now (the app automatically keeps resources up to date via periodic syncing)</string>
    <string name="settings_title">Settings</string>
    <string name="web_view_auth_dialog_host">Host: %1$s</string>
    <string name="web_view_auth_dialog_password">Password</string>
    <string name="web_view_auth_dialog_save_credentials">Save</string>
    <string name="web_view_auth_dialog_username">Username</string>
</resources>