<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/login_register_register_scroll_view" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:layout_gravity="top|center_vertical|center_horizontal|center" android:id="@+id/login_register_register_img" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY"/>
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@+id/login_register_register_linear_layout" android:padding="16dp" android:layout_width="match_parent" android:layout_height="match_parent">
            <EditText android:id="@+id/login_register_register_first_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_register_register_first_name" android:inputType="textPersonName"/>
            <EditText android:id="@+id/login_register_register_last_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_register_register_last_name" android:inputType="textPersonName"/>
            <EditText android:id="@+id/login_register_register_email" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_register_register_email" android:inputType="textEmailAddress"/>
            <EditText android:id="@+id/login_register_register_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_register_register_password" android:inputType="textPassword"/>
            <EditText android:typeface="sans" android:id="@+id/login_register_register_confirm_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_register_register_confirm_password" android:inputType="textPassword"/>
            <EditText android:id="@+id/login_register_register_date_of_birth" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_register_register_date_of_birth" android:inputType="date"/>
            <EditText android:id="@+id/login_register_register_phone_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/login_register_register_phone_number" android:inputType="phone"/>
            <EditText android:id="@+id/login_register_register_loyalty_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="Loyalty ID" android:inputType="number"/>
            <Button android:id="@+id/login_register_register_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login_register_action_register"/>
        </LinearLayout>
    </FrameLayout>
</ScrollView>
