<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/scroll" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
    <LinearLayout android:layout_gravity="top|center_vertical|center_horizontal|center" android:orientation="vertical" android:id="@+id/event_details_form" android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingBottom="15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/calendar_event_edit_title" style="@style/form_field_label"/>
        <EditText android:id="@+id/event_title_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/calendar_event_edit_title_hint" style="@style/form_text_field"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calendar_event_edit_category" style="@style/form_field_label"/>
        <Spinner android:id="@+id/category_spinner" android:layout_width="match_parent" android:layout_height="wrap_content" android:prompt="@string/calendar_event_category_spinner_prompt" style="@style/Widget.AppCompat.Spinner.Underlined"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/event_reference_field_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calendar_event_edit_case_reference" style="@style/form_field_label"/>
            <EditText android:id="@+id/event_reference_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="Event reference" style="@style/form_text_field"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/event_case_number_field_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calendar_event_edit_case_number" style="@style/form_field_label"/>
            <EditText android:id="@+id/event_case_number_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="Event case number" style="@style/form_text_field"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/event_location_field_container" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calendar_event_edit_location" style="@style/form_field_label"/>
            <EditText android:id="@+id/event_location_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/calendar_event_edit_location_hint" style="@style/form_text_field"/>
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calendar_event_edit_start_time" style="@style/form_field_label"/>
        <com.seattleclouds.widget.DateTimePicker android:id="@+id/start_date_picker" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calendar_event_edit_end_time" style="@style/form_field_label"/>
        <com.seattleclouds.widget.DateTimePicker android:id="@+id/end_date_picker" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <LinearLayout android:gravity="end" android:id="@+id/all_day_checkbox_container" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/all_day_checkbox_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp" android:text="@string/calendar_event_edit_all_day" style="@style/form_field_label"/>
            <CheckBox android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/all_day_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/days_on_days_off_fields_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <View android:id="@+id/separator" android:background="#ff909090" android:layout_width="wrap_content" android:layout_height="2dp" android:layout_marginLeft="5dp" android:layout_marginTop="20dp" android:layout_marginRight="5dp" android:layout_marginBottom="20dp"/>
        </LinearLayout>
        <Button android:id="@+id/view_description_button" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:minHeight="56dp" android:text="@string/calendar_event_edit_view_description"/>
        <Button android:id="@+id/delete_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:minHeight="56dp" android:text="@string/delete"/>
    </LinearLayout>
</ScrollView>
