<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:gravity="center_vertical" android:id="@+id/web_login_dialog_hostname" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/web_view_auth_dialog_host"/>
    <EditText android:id="@+id/username" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:hint="@string/web_view_auth_dialog_username" android:inputType="textEmailAddress"/>
    <EditText android:id="@+id/password" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:hint="@string/web_view_auth_dialog_password" android:inputType="textPassword"/>
    <CheckBox android:id="@+id/web_auth_dialog_save_credentials" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:text="@string/web_view_auth_dialog_save_credentials"/>
</LinearLayout>
